2005-09-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* lua.cc, std_hooks.lua: use proper regexes for .mt-ignore
	taken from a patch from Martin Dvorak
	* contrib/monotone-cvs-ignore.lua: New file, from the same patch.
	supports .cvsignore files
	* tests/t_mt_ignore.at: check that a missing .mt-ignore
	doesn't cause problems

2005-09-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/t_mt_ignore.at: use RAW_MONOTONE instead of ugly --rcfile
	Also actually do "mtn add" this time.

2005-09-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/t_mt_ignore.at: new test, checks that .mt-ignore works
	* testsuite.at: add it

2005-09-01  Timothy Brownawell  <tbrownaw@gmail.com>

	* std_hooks.lua: support .mt-ignore
	* monotone.texi: mention .mt-ignore and MT/wanted-testresults under
	"Existing control files"
	* .mt-ignore: ignore testsuite.dir

2005-09-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* ui.cc (user_interface): Avoid calling sync_with_stdio(false) on
	Win32 for now to work around a bug in MinGW where unsynchronized
	std::cin returns EOF earlier when reading a stream with DOS
	newlines.  Resolves 'db load' failure reported by Howard Spindel.
	* database.cc (load): Don't bother executing an empty string.
	* commands.cc (ALIAS(import, setup)): Remove alias.

2005-09-01  Matt Johnston  <matt@ucc.asn.au>

	* schema.sql: add BEGIN, COMMIT to make it a single transaction,
	improves db init performance significantly on OS X (avoids many
	disk-cache flushes).

2005-09-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Increase entropy used to generate port numbers
	where we can and increase range of port numbers generated.
	* monotone.texi: Fix a couple of minor typos.

2005-09-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.texi: Update 'setup' documentation and tutorial to
	reflect new usage.  Also update much of the monotone output in the
	tutorials to reflect the output of more modern versions of